1. update api specification 2. add sql for table structure
